--- a/src/app/modules/shared/dashboard-container/dashboard-container.component.html
+++ b/src/app/modules/shared/dashboard-container/dashboard-container.component.html
@@ -1,5 +1,5 @@
 <clr-main-container>
-  <!-- <nav class="subnav">
+  <nav class="subnav">
     <ul class="nav">
       <li class="nav-item">
         <a class="nav-link active app-title">UPRIGHT DASHBOARD</a>
@@ -10,7 +10,7 @@
         {{service?.email}}
       </a>
     </div>
-  </nav> -->
+  </nav>
   <div class="content-container">
     <main class="content-area">
       <ng-content select=".main"></ng-content>
