--- a/src/app/modules/dashboard/component/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/component/dashboard/dashboard.component.html
@@ -31,10 +31,10 @@
       <clr-icon clrVerticalNavIcon shape="chat-bubble"></clr-icon>
       Testimonials
     </a>
-    <!-- <a clrVerticalNavLink routerLinkActive="active"
+    <a clrVerticalNavLink routerLinkActive="active"
       routerLink="users">
       <clr-icon clrVerticalNavIcon shape="users"></clr-icon>
       Users
-    </a> -->
+    </a>
   </clr-vertical-nav>
 </app-dash>
