Fix to post create

--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -35,6 +35,9 @@
   </div>
 </div> -->
 
+<div *ngIf="loading" class="progress loop">
+  <progress></progress>
+</div>
 
 <div class="section">
   <div class="card segment login">
